# web_world

./: .env.example  .gitignore  Dockerfile  README.md  README_ua.md  docker-compose.yml  env  pyproject.toml  requirements.txt
app_parking/: db.sqlite3  manage.py
app_parking/app_accounts/: admin.py  apps.py  backends.py  forms.py  models.py  signals.py  urls.py  views.py
app_parking/app_accounts/migrations/: 0001_initial.py  0002_profile_balance.py  0002_user_avatar.py  0002_user_bio_user_birth_date_user_location.py  0002_user_profile_image.py  0003_parkinghistory.py  0003_remove_user_avatar.py  0004_profile_avatar.py
app_parking/app_accounts/static/app_accounts/: edit.css  login.css  parking.css  parking_history.css  profile.css  register.css
app_parking/app_accounts/templates/app_accounts/: edit_profile.html  login.html  parking.html  parking_history.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  (+4 more)
app_parking/app_car_moderation/: admin.py  apps.py  models.py  urls.py  views.py
app_parking/app_car_moderation/migrations/: 0001_initial.py
app_parking/app_home/: urls.py  views.py
app_parking/app_optical_detect/: admin.py  apps.py  models.py
app_parking/app_optical_detect/migrations/: 0001_initial.py
app_parking/app_parking/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app_parking/app_payments/: admin.py  models.py
app_parking/app_photo/: forms.py  models.py  read_car_number.py  urls.py  views.py
app_parking/app_photo/migrations/: 0002_alter_car_image_image.py  0003_alter_car_image_image.py
app_parking/app_report/: admin.py  apps.py  models.py  utils.py
app_parking/app_report/migrations/: 0001_initial.py
(+35 files in other folders)
